# org.intocps.maestro.fmi

./: .gitignore  .gitmodules  Jenkinsfile  README.md  pom.xml  project_overview.drawio  xcompile.sh
.github/workflows/: changelog.yml  maven.yml  release.yml
fmi2/: pom.xml
fmi2/src/main/java/org/intocps/fmi/: Fmi2Status.java  Fmi2StatusKind.java  FmiInvalidNativeStateException.java  FmuInvocationException.java  FmuMissingLibraryException.java  FmuResult.java  IFmiComponent.java  IFmiComponentState.java  IFmu.java  IFmuCallback.java  InvalidParameterException.java
fmi2/src/main/resources/: fmi2Type.xsd
fmi2/src/main/resources/org/intocps/fmi/schemas/2.0.0/: fmi2Annotation.xsd  fmi2AttributeGroups.xsd  fmi2ModelDescription.xsd  fmi2ScalarVariable.xsd  fmi2Unit.xsd  fmi2VariableDependency.xsd
jnifmuapi/: pom.xml
jnifmuapi/src/main/java/org/intocps/fmi/jnifmuapi/: DirectoryFmu.java  Factory.java  FmiUtil.java  Fmu.java  FmuComponent.java  FmuComponentState.java  FmuModelDescription.java  Main.java  NativeFmu.java  NativeFmuApi.java  NativeFmuComponent.java  NativeFmuLibraryLoader.java  NativeLibraryLoader.java  TempDirectory.java  ZipUtility.java
jnifmuapi/src/main/java/org/intocps/fmi/jnifmuapi/fmi2/schemas/: Fmi2Schema.java
jnifmuapi/src/main/java/org/intocps/fmi/jnifmuapi/fmi3/: DirectoryFmi3Fmu.java  Fmi3DependencyKind.java  Fmi3EventQualifier.java  Fmi3Fmu.java  Fmi3Instance.java  Fmi3IntervalQualifier.java  Fmi3State.java  Fmi3Status.java  Fmu3.java  FmuResult.java  ICallbackIntermediateUpdate.java  ICallbackLockPreemption.java  ICallbackLogMessage.java  ICallbackUnlockPreemption.java  IClockUpdateCallback.java  IFmi3Fmu.java  IFmi3Instance.java  IIntermediateUpdateCallback.java  ILockPreemptionCallback.java  ILogMessageCallback.java  IUnlockPreemptionCallback.java  NativeFmu3.java  NativeFmu3Exception.java  NativeFmu3Instance.java
jnifmuapi/src/main/java/org/intocps/fmi/jnifmuapi/fmi3/schemas/: Fmi3Schema.java
jnifmuapi/src/main/java/org/intocps/fmi/jnifmuapi/schemas/: Fmi2Schema.java
jnifmuapi/src/main/java/org/intocps/fmi/jnifmuapi/shared/: NativeFmuApi.java  NativeLibraryLoader.java  NativeLoadManager.java
jnifmuapi/src/main/java/org/intocps/fmi/jnifmuapi/xml/: NamedNodeMapIterator.java  NodeIterator.java  SchemaProvider.java  SchemaResourceResolver.java
jnifmuapi/src/main/java/org/intocps/fmi2/schemas/: Fmi2Schema.java
jnifmuapi/src/main/java/org/intocps/fmi3/: Fmi3DependencyKind.java  Fmi3Fmu.java  Fmi3Instance.java  Fmi3IntervalQualifier.java  Fmi3Status.java  ICallbackIntermediateUpdate.java  ICallbackLockPreemption.java  ICallbackLog.java  ICallbackLogMessage.java  ICallbackUnlockPreemption.java  IFmi3Fmu.java  IFmi3Instance.java  IFmu3.java
jnifmuapi/src/main/java/org/intocps/fmi3/jnifmuapi/: NativeFmu3.java  NativeFmu3Instance.java  NativeFmuInstance3.java
jnifmuapi/src/main/java/org/intocps/fmi3/schemas/: Fmi3Schema.java
jnifmuapi/src/main/native/: CMakeLists.txt  JavaJni.cmake  JavaPlatformFolder.cmake  build.ninja  config.h  mac_compileAndMoveToTestResources.sh
jnifmuapi/src/main/native/include/: org_intocps_fmi3_jnifmuapi_NativeFmu3.h  org_intocps_fmi3_jnifmuapi_NativeFmu3_ICallbackIntermediateUpdate.h  org_intocps_fmi3_jnifmuapi_NativeFmu3_ICallbackLockPreemption.h  org_intocps_fmi3_jnifmuapi_NativeFmu3_ICallbackLogMessage.h  org_intocps_fmi3_jnifmuapi_NativeFmu3_ICallbackUnlockPreemption.h  org_intocps_fmi3_jnifmuapi_NativeFmuInstance3.h  org_intocps_fmi_jnifmuapi_NativeFmu.h  org_intocps_fmi_jnifmuapi_NativeFmuComponent.h  org_intocps_fmi_jnifmuapi_NativeFmu_ICallback.h  org_intocps_fmi_jnifmuapi_fmi3_NativeFmu3.h  org_intocps_fmi_jnifmuapi_fmi3_NativeFmu3Instance.h
jnifmuapi/src/main/native/src/: comp_api.c  comp_api.h  comp_data.cpp  comp_data.h  fmu_api.c  fmu_api.h  fmu_test.c  jni_util.c  jni_util.h  sim_support.c  sim_support.h
jnifmuapi/src/main/native/src/fmi3/: Fmi3Manager.cpp  Fmi3Manager.h  Fmi3PreemptExpansion.h  NativeFmu3.cpp  NativeFmuInstance.cpp  sim_support3.c  sim_support3.h
jnifmuapi/src/main/native/src/shared/: utilities.c  utilities.h
jnifmuapi/src/test/java/org/intocps/fmi/jnifmuapi/: BaseFmuComponent.java  FmuComponentStatusTest.java  FmuComponentTest.java  FmuLoadTest.java  FmuModelDescriptiontest.java  FmuTest.java  LoadInstantiateFreeUnloadTest.java  NativeFmuExceptionTest.java  NativeFmuLibrary.java  SchemaTest.java  StaticTest.java  TestUtils.java
jnifmuapi/src/test/java/org/intocps/fmi/jnifmuapi/fmi3/: BouncingBallFmi3InstanceTest.java  BouncingBallFmi3Test.java  Fmi3ApiTest.java
jnifmuapi/src/test/resources/: CMakeLists.txt  fmu2test1.fmu  log4j.properties
jnifmuapi/src/test/resources/Mac-x86_64/: apitest.dylib
jnifmuapi/src/test/resources/fmu_compiler_util/: CMakeLists_template.txt  CMakeLists_template3.txt  FmiBinaryFolder.cmake  prepare_cmake.py
jnifmuapi/src/test/resources/fmus/: BouncingBall.fmu
jnifmuapi/src/test/resources/fmus/bouncingball/sources/: model.h
jnifmuapi/src/test/resources/fmus/fmi2/fmi2functiontest/: modelDescription.xml
jnifmuapi/src/test/resources/fmus/fmi2/fmi2functiontest/sources/: buildDescription.xml  fmu2test1.c  fmuTemplate.c  fmuTemplate.h
jnifmuapi/src/test/resources/fmus/fmi3/bouncingball/: modelDescription.xml
jnifmuapi/src/test/resources/fmus/fmi3/bouncingball/sources/: buildDescription.xml  cosimulation.c  fmi3Functions.c
jnifmuapi/src/test/resources/fmus/fmi3/fmi3functiontest/: modelDescription.xml
jnifmuapi/src/test/resources/fmus/fmi3/fmi3functiontest/sources/: buildDescription.xml  fmi3Functions.c  fmi3functiontest.c
threading-test/: pom.xml
threading-test/src/main/java/: Main.java
threading-test/src/main/resources/: log4j.properties
